# gui_framework

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  bench.bat  bench.sh  build.bat  build.sh  code_editor.toml  run.bat  run.sh  test.bat  test.sh
benchmarks/: framework_benchmarks.cpp
cmake/: cpp_project_options.cmake  embed_binary.cmake  hot_reload.cmake
docs/: programming_guidelines.md  rendering_effects.md  testing_strategy.md  ui_api_examples.md  ui_api_testbed_liquid_glass_context.md  ui_api_testbed_liquid_glass_prompts.md  ui_api_testbed_runtime_perf_context.md  ui_api_testbed_runtime_perf_prompts.md  ui_rendering_context.md
examples/: framework_info.cpp  liquid_glass_testbed.cpp  render_dx12_clear_smoke.cpp  render_effects_testbed.cpp  render_triangle_testbed.cpp  text_rendering_testbed.cpp  text_stage_probe.cpp
examples/code_editor/: CMakeLists.txt  README.md  abap_tokenizer.cpp  app.cpp  app.h  cpp_tokenizer.cpp  editor_config.cpp  editor_config.h  editor_model.cpp  editor_model.h  editor_render.cpp  editor_render.h  editor_session_state.cpp  editor_session_state.h  editor_theme.cpp  editor_theme.h  git.cpp  git.h  host.cpp  json_tokenizer.cpp  lsp.cpp  lsp.h  lsp_client_win32.cpp  lsp_client_win32.h  shared.h  syntax.cpp  syntax.h  text_buffer.cpp  text_buffer.h
examples/code_editor/resources/: code_editor.rc
examples/repository_ui_testbed/: CMakeLists.txt  app.cpp  app.h  host.cpp  repo_data.cpp  repo_data.h  shared.h  ui_common.h  ui_icons.cpp  ui_icons.h  ui_repository.cpp  ui_repository.h  ui_theme.cpp  ui_theme.h
examples/ui_api_testbed/: CMakeLists.txt  README.md  app.cpp  app.h  host.cpp  shared.h  trace.cpp  ui_backdrop.cpp  ui_backdrop.h  ui_common.cpp  ui_common.h  ui_dialogs.cpp  ui_dialogs.h  ui_main_tab.cpp  ui_main_tab.h  ui_root.cpp  ui_root.h  ui_sample_tab.cpp  ui_sample_tab.h  ui_theme.cpp  ui_theme.h  ui_types.h
scripts/: ui_api_testbed_perf_probe.ps1  windows_build_env.bat
scripts/repro/: README.md  code_editor_action_output_repro.ps1  code_editor_chrome_text_reference.ps1  code_editor_file_menu_repro.ps1  code_editor_git_panel_repro.ps1  code_editor_goto_line_repro.ps1  code_editor_scroll_repro.ps1  code_editor_symbols_repro.ps1  code_editor_text_reference_set.ps1  code_editor_text_rendering_repro.ps1  code_editor_text_stage_probe.ps1  render_primitives_reference.ps1  repro_common.ps1
src/base/: CMakeLists.txt
src/base/include/base/: assert.h  bit_set.h  config.h  crash.h  fmt.h  hash_map.h  io.h  memory.h  print.h  slice.h  small_array.h  spsc_queue.h  stable_hash_map.h  str_ref.h  strconv.h  string_buffer.h  unicode.h  vec.h  virtual_memory.h  xar.h
src/base/src/: assert.cpp  crash.cpp  fmt.cpp  io.cpp  memory.cpp  print.cpp  strconv.cpp  string_buffer.cpp  unicode.cpp  virtual_memory.cpp
src/bench/include/bench/: bench.h
src/bench/src/: bench.cpp
src/draw/: CMakeLists.txt
src/draw/include/draw/: draw.h  draw_renderer.h
src/draw/src/: coverage_mask_atlas.cpp  coverage_mask_atlas.h  draw.cpp  draw_path.cpp  draw_path.h  draw_primitive.h  draw_renderer.cpp  draw_renderer_state.cpp  draw_renderer_state.h  text_atlas.cpp  text_atlas.h
src/encoding/: CMakeLists.txt
src/encoding/include/encoding/: json.h
src/encoding/src/: json.cpp
src/font_cache/: CMakeLists.txt
src/font_cache/include/font_cache/: font_cache.h
src/font_cache/src/: font_cache.cpp
src/font_provider/: CMakeLists.txt
src/font_provider/include/font_provider/: font_provider.h
src/font_provider/src/: font_provider.cpp  font_provider_dwrite.cpp  font_provider_freetype_win32.cpp  font_provider_platform.h  font_provider_stub.cpp  font_provider_win32.cpp  font_provider_win32_backends.h
src/gui/: CMakeLists.txt
src/gui/include/gui/: gui.h  hot_reload.h  hot_reload_app.h  hot_reload_overlay.h  input.h  input_win32.h  version.h
src/gui/src/: gui.cpp  hot_reload.cpp  hot_reload_app.cpp  hot_reload_overlay.cpp  input.cpp  input_win32.cpp  version.cpp
src/render/: CMakeLists.txt
src/render/include/render/: render.h
src/render/src/: render.cpp  render_backend.h  render_d3d11.cpp  render_d3d11.h  render_d3d12.cpp  render_d3d12.h  render_image_texture_stub.cpp  render_image_texture_win32.cpp
src/test/include/test/: test.h
src/test/src/: test.cpp
tests/: framework_tests.cpp
tests/base/: base_tests.cpp
tests/code_editor/: editor_model_tests.cpp  git_tests.cpp  lsp_tests.cpp  syntax_tests.cpp
tests/draw/: draw_tests.cpp
tests/font_cache/: font_cache_tests.cpp
tests/font_provider/: font_provider_tests.cpp
tests/gui/: gui_tests.cpp
tests/render/: render_tests.cpp
tools/: framework_info.cpp  render_dx12_clear_smoke.cpp  render_effects_testbed.cpp  render_triangle_testbed.cpp  repository_ui_testbed.cpp  text_rendering_testbed.cpp  ui_api_testbed.cpp
tools/ui_api_testbed/: CMakeLists.txt  README.md  app.cpp  host.cpp  module_loader.cpp  module_loader.h  shared.h  trace.h
